<resources>
    <string name="app_name">SeQR</string>
    <string name="app_title">SeQR</string>
    <string name="button_mainLogin">Login</string>
    <string name="button_mainSignup">Sign Up</string>
    <string name="floating_mainQR">Scan a QR code</string>
    <string name="qr_capture_text">Scan a QR Code</string>
    <string name="floating_createQR">Generate QR Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_signed_up">Your Upcoming Events</string>
    <string name="tap_here_to_create_an_event">Create an Event</string>
    <string name="event_created">Created Events</string>
    <string name="event_lobby">Event Lobby</string>
    <string name="back">Back</string>
    <string name="browse_images">Browse Images</string>
    <string name="browse_profiles">Browse Profiles</string>
    <string name="browse_events">Browse Events</string>
    <string name="administrator">Administrator</string>
    <string name="enter_here">Enter here...</string>
    <string name="what_is_your_username">What is your username?</string>
    <string name="welcome_to_seqr">Welcome to SeQR!</string>
    <string name="a_button_to_confirm_that_you_want_to_create_a_profile">Create profile confirmation</string>
    <string name="signup">Sign Up</string>
    <string name="default_notification_channel_id">Default</string>
    <string name="all_attendees">All Attendees</string>
    <string name="number_of_attendees">%1$d Attendee(s) in total</string>
    <string name="check_in_s_in_total"># check-in(s) in total</string>
    <string name="check_ins_total">%1$d CheckIn(s) in total</string>
    <string name="event_details">Event Details</string>
    <string name="next">Next</string>
    <string name="enter_the_capacity">Enter the capacity</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="enter_the_location">Enter the location</string>
    <string name="enter_the_name_of_the_event">Enter the name of the event</string>
    <string name="enter_the_time">Enter the time</string>
    <string name="new_announcement">New Announcement</string>
    <string name="enter_the_announcement_title">Enter the announcement title</string>
    <string name="as_notification">As notification?</string>
    <string name="confirm">Confirm</string>
    <string name="enter_the_date">Enter the date</string>
    <string name="enter_a_username_or_leave_blank">Enter a Username (or leave blank!)</string>
</resources>