<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"


        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:gravity="center"
        android:text="@string/welcome_to_seqr"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="472dp"
        android:text="@string/what_is_your_username"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/enteredUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginBottom="24dp"
        android:hint="@string/enter_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.121" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpConfirmButton"
        android:background="@color/black"
        android:layout_width="84dp"
        android:layout_height="84dp"
        app:iconSize="40dp"
        app:iconGravity="start"
        app:iconTint="@color/black"
        app:icon="@drawable/checkmark_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteredUsername"
        app:layout_constraintVertical_bias="0.202" />


</androidx.constraintlayout.widget.ConstraintLayout>